# omniclaw

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.agent  README.md  ROADMAP.md  build.sh  docker-compose.agent.yml  docker-compose.payment-agent.yml  docker-compose.seller-agent.yml  payment-agent.policy.json  pyproject.toml  pytest.ini  seller-agent.policy.json  test_results.txt
.github/workflows/: ci.yml  format.yml
docs/: API_REFERENCE.md  CCTP_USAGE.md  CONTRIBUTOR_GUIDE.md  FEATURES.md  FOUNDATION_DEMO.md  POLICY_REFERENCE.md  PRODUCTION_HARDENING.md  README.md  SDK_USAGE_GUIDE.md  TWO_SIDED_DEMO.md  agent-getting-started.md  agent-skills.md  cli-reference.md  compliance-architecture.md  developer-guide.md  erc_804_spec.md  facilitators.md  installable-skills.md  operator-cli.md  production-readiness.md
docs/omniclaw-cli-skill/: SKILL.md
examples/: default-policy.json  policy-advanced.json  policy-simple.json
examples/agent/: docker-compose.yml  omnicore_agent_demo.py  omnicore_agent_local_test.py  policy.json
examples/arc-marketplace-showcase/: README.md  app.py
examples/b2b-sdk-integration/: README.md  buyer_sdk.py  vendor_circle.py  vendor_self_hosted_exact.py  (+1 more)
mcp_server/: README.md  start.py
scripts/: demo_foundation_showcase.sh  demo_foundation_tmux.sh  demo_two_sided.sh  generate_cli_reference.py  release_verify.sh  reset_arc_vendor_demo_state.sh  start_arc_exact_facilitator.sh  start_arc_marketplace_showcase.sh  start_arc_marketplace_showcase_docker.sh  start_arc_vendor_demo.sh  start_business_compute_demo.sh  start_external_x402_seller.py  start_local_economy.sh  start_x402_exact_testnet_facilitator.py  start_x402_exact_testnet_seller.py  verify_release_artifact.py  x402_simple_server.py
tests/: conftest.py  test_arc_marketplace_showcase.py  test_cctp_constants.py  test_cctp_manual_mint.py  test_circuit_breaker.py  test_cli_facilitator.py  test_client.py  test_config.py  test_e2e_seller_buyer.py  test_exact_facilitator_app.py  test_exact_network_profiles.py  test_external_qa.py  test_facilitator_e2e.py  test_facilitator_integration.py  test_facilitator_live_integration.py  test_fund_lock.py  test_gas.py  test_gateway.py  test_idempotency.py  test_intent_lifecycle.py  test_migrations.py  test_nanopayments_exceptions.py  test_nanopayments_integration.py  test_nanopayments_middleware.py  test_nanopayments_middleware_coverage.py  test_nanopayments_signing.py  test_nanopayments_types.py  test_payment_failures.py  test_payment_intents.py  test_payment_router.py  test_real_sdk_code.py  test_reservation_integrity.py  test_sdk_events.py  test_sdk_integration.py  test_sdk_integration_extended.py  test_seller_side.py  test_server_integration.py  test_setup.py  test_simulation.py  test_skills.py  (+8 more)
(+163 files in other folders)
